--- a/list.html
+++ b/list.html
@@ -15,6 +15,7 @@
 
 <body>
   <!-- Navigation bar-->
+
   <div class="bg-light">
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-light ">
@@ -26,16 +27,16 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
-            <li class="nav-item active">
+            <li class="nav-item ">
               <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link" href="./list.html">List</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Custom Page</a>
             </li>
-            <li class="nav-item dropdown">
+            <!-- <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 About as
               </a>
@@ -45,49 +46,41 @@
                 <a class="dropdown-item" href="#">Something else here</a>
 
               </div>
-            </li>
+            </li> -->
           </ul>
         </div>
       </nav>
     </div>
   </div>
   <!--Main-->
-  <div class="main container main--sidebar">
+
+  <div class="main  container">
     <!--Content-->
-    <div class="content">
-      <!--Slider-->
-      <div class="slider">
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-          </ol>
-          <div class="carousel-inner">
+
+    <form class="search-form">
+      <div class="form-row align-items-center">
+        <div class="fld-search">
+          <label class="sr-only" for="inlineFormInput">Name</label>
+          <input type="text" class="form-control mb-2 field-search" id="inlineFormInput" placeholder="Jane Doe">
+        </div>
+        <div class="col-auto">
+          <label class="sr-only" for="inlineFormInputGroup">Username</label>
+          <div class="input-group mb-2">
+            <div class="input-group-prepend">
+
+            </div>
+            <div class="col-aut">
+              <button type="button" class=" src-btn btn-primary mb-2">Search</button>
+            </div>
           </div>
-          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
         </div>
       </div>
-      <!--Top reated-->
-      <div class="top-rated row"></div>
-      <button type="button" class="btn load-more-top-rated btn-primary">
-        <h5>Load more</h5>
-      </button>
-    </div>
-    <!--Sidebar-->
-    <div class="sidebar">
-      <div class="teaser_best">
-      </div>
-      <div class="teaser_facebook"></div>
+    </form>
+    <div class="filter-results row">
+
     </div>
   </div>
+
   <!--Footer-->
   <div class="footer bg-light">
     <div class="container">
@@ -111,24 +104,7 @@
     </div>
   </div>
 
-  <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h2 class="modal-title" id="exampleModalCenterTitle">Modal title</h2>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
 
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        </div>
-      </div>
-    </div>
-  </div>
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -136,7 +112,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <script src="./js/api.js"></script>
-  <script src="./js/home.js"></script>
+  <script src="./js/list.js"></script>
 </body>
 
 </html>
