--- a/list.html
+++ b/list.html
@@ -58,23 +58,53 @@
     <!--Content-->
 
     <form class="search-form">
-      <div class="form-row align-items-center">
-        <div class="fld-search">
-          <label class="sr-only" for="inlineFormInput">Name</label>
-          <input type="text" class="form-control mb-2 field-search" id="inlineFormInput" placeholder="Jane Doe">
-        </div>
-        <div class="col-auto">
-          <label class="sr-only" for="inlineFormInputGroup">Username</label>
-          <div class="input-group mb-2">
-            <div class="input-group-prepend">
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+        <label class="form-check-label" for="inlineRadio1">Name</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+        <label class="form-check-label" for="inlineRadio2">Category</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3">
+        <label class="form-check-label" for="inlineRadio3">Area</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+        <label class="form-check-label" for="inlineRadio2">Ingredient</label>
+      </div>
 
-            </div>
-            <div class="col-aut">
-              <button type="button" class=" src-btn btn-primary mb-2">Search</button>
-            </div>
+
+      <div class="fld-search">
+        <label class="sr-only" for="inlineFormInput">Name</label>
+        <input type="text" class="form-control mb-2 field-search" id="inlineFormInput" placeholder="Search">
+      </div>
+
+      <div class="form-group">
+        <label for="mealCategory">Category</label>
+        <select class="form-control" id="mealCategory">
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="mealCategory">Area</label>
+        <select class="form-control" id="areaCategory">
+        </select>
+      </div>
+
+      <div class="form-group" id="ingredients">
+      </div>
+
+      <div class="col-auto">
+        <label class="sr-only" for="inlineFormInputGroup">Username</label>
+        <div class="input-group mb-2">
+          <div class="col-aut">
+            <button type="button" class=" src-btn btn-primary mb-2">Search</button>
           </div>
         </div>
       </div>
+
+
     </form>
     <div class="filter-results row">
 
