Zavrsena list strana i dodavanje modal windowa na home strani

--- a/aboutAs.html
+++ b/aboutAs.html
@@ -30,11 +30,11 @@
             <li class="nav-item ">
               <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item active">
+            <li class="nav-item ">
               <a class="nav-link" href="./list.html">List</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Custom Page</a>
+            <li class="nav-item active">
+              <a class="nav-link" href="/.aboutAs.html">Custom Page</a>
             </li>
             <!-- <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -72,17 +72,17 @@
       <div class="container">
         <ul class="nav">
           <li class="nav-item">
-            <a class="nav-link active" href="#">
+            <a class="nav-link active" href="./index.html">
               <h3>Home</h3>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="./list.html">
               <h3>Recipes</h3>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="./aboutAs.html">
               <h3>About as</h3>
             </a>
           </li>
