--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   <title>Bonsai fresh & healthy!</title>
 </head>
 
-<body>
+<body>\
+
+  
   <!-- Navigation bar-->
   <div class="bg-light">
     <div class="container">
@@ -33,7 +35,7 @@
               <a class="nav-link" href="./list.html">List</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Custom Page</a>
+              <a class="nav-link" href="./aboutAs.html">Custom Page</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -93,17 +95,17 @@
     <div class="container">
       <ul class="nav">
         <li class="nav-item">
-          <a class="nav-link active" href="#">
+          <a class="nav-link active" href="./index.html">
             <h3>Home</h3>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">
+          <a class="nav-link" href="./list.html">
             <h3>Recipes</h3>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">
+          <a class="nav-link" href="./aboutAs.html">
             <h3>About as</h3>
           </a>
         </li>
