Izmjene naslova stranica

--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
   <title>Bonsai fresh & healthy!</title>
 </head>
 
-<body>\
-
-  
+<body>
   <!-- Navigation bar-->
   <div class="bg-light">
     <div class="container">
