Male izmjene u html-u

--- a/list.html
+++ b/list.html
@@ -34,7 +34,7 @@
               <a class="nav-link" href="./list.html">List</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./aboutAs.html">Custom Page</a>
+              <a class="nav-link" href="./costum.html">Custom Page</a>
             </li>
             <!-- <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -122,8 +122,8 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./aboutAs.html">
-            <h3>About as</h3>
+          <a class="nav-link" href="./costum.html">
+            <h3>Costum page</h3>
           </a>
         </li>
       </ul>
