--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 </head>
 
 <body>
+
+    <div class="loader">
+        <img src="./img/loading.gif" alt="Loading..." />
+    </div>
+
   <!-- Navigation bar-->
   <div class="bg-light">
     <div class="container">
